Finished templating on shop page and product logic and admin

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -47,114 +47,9 @@
         </div><!--end of row-->
     </div><!--end of container-->
 </section>
-
-<section class="products-grid">
-    <div class="container">
-        <div class="row products-container">
-            <div class="col-md-4 col-sm-6 col-xs-12 product">
-                <div class="thumbnail" style="background-image: url('/assets/products/1.jpg');">
-                    <div class="product-details text-center">
-                        <div class="align-vertical">
-                            <h3>Shoes</h3>
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                            <p class="product-price">$90</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 product">
-                <div class="thumbnail" style="background-image: url('/assets/products/2.jpg');">
-                    <div class="product-details text-center">
-                        <div class="align-vertical">
-                            <h3>Whiskey</h3>
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                            <p class="product-price">$90</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 product">
-                <div class="thumbnail" style="background-image: url('/assets/products/3.jpg');">
-                    <div class="product-details text-center">
-                        <div class="align-vertical">
-                            <h3>Ball</h3>
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                            <p class="product-price">$90</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6 col-xs-12 product">
-                <div class="thumbnail" style="background-image: url('/assets/products/4.jpg');">
-                    <div class="product-details text-center">
-                        <div class="align-vertical">
-                            <h3>Music</h3>
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                            <p class="product-price">$90</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 product">
-                <div class="thumbnail" style="background-image: url('/assets/products/5.jpg');">
-                    <div class="product-details text-center">
-                        <div class="align-vertical">
-                            <h3>T-shirt</h3>
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                            <p class="product-price">$90</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 product">
-                <div class="thumbnail" style="background-image: url('/assets/products/6.jpg');">
-                    <div class="product-details text-center">
-                        <div class="align-vertical">
-                            <h3>Glasses</h3>
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                            <p class="product-price">$90</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6 col-xs-12 product">
-                <div class="thumbnail" style="background-image: url('/assets/products/3.jpg');">
-                    <div class="product-details text-center">
-                        <div class="align-vertical">
-                            <h3>Ball</h3>
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                            <p class="product-price">$90</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 product">
-                <div class="thumbnail" style="background-image: url('/assets/products/1.jpg');">
-                    <div class="product-details text-center">
-                        <div class="align-vertical">
-                            <h3>Shoes</h3>
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                            <p class="product-price">$90</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 product">
-                <div class="thumbnail" style="background-image: url('/assets/products/2.jpg');">
-                    <div class="product-details text-center">
-                        <div class="align-vertical">
-                            <h3>Whiskey</h3>
-                            <a href="#" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                            <p class="product-price">$90</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div><!-- /.row -->
-    </div><!-- /.container -->
-</section>
+<br>
+<h2 class="page-title text-center">Featured Products</h2>
+<%= render 'shared/list' %>
 
 <section>
     <div class="background-image-holder on-page overlay">
